--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,31 @@ header{
     color: #757575;
 }
 
+
+/*Event create page */
+
+.event-create-container {
+    padding: 30px;
+}
+
+.event-create-container label {
+    font-weight: bold;
+}
+
+.event-create-container input,
+.event-create-container select,
+.event-create-container textarea {
+    font-size: 12px;
+}
+
+.msg{
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #C3E8CB;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+}
 /*footer*/
 
 footer{
