--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,7 +176,14 @@ header{
     margin: 20px 0;
 }
 
+#items-list{
+    list-style: none;
+    padding-left: 0;
+}
 
+#items-list li{
+    display: flex;
+}
 .msg{
     background-color: #d4edda;
     color: #155724;
